# spacegame

poc/: index.html
service/: .env  Cargo.toml  Taskfile.yml  docker-compose.yml  go.mod  go.sum
service/cmd/spacegame/: config.go  main.go
service/integration/: server.go  test_service.go
service/integration/health/: health_test.go
service/integration/health/.snapshots/: TestHealth  health_test-TestHealth-func1-body  health_test-TestHealth-func1-headers
service/internal/: main.go
service/internal/infrastructure/database/: database.go  database_test.go  migrate.go  migrate_test.go  parcello.go  postgres.go  postgres_test.go  query.go  resource.go  testDatabase.go
service/internal/infrastructure/health/: check.go  component.go  healthchecker.go  healthchecker_test.go  http.go
service/internal/infrastructure/server/: router.go  server.go  testing.go
service/internal/infrastructure/service/: service.go  settings.go  testing.go
service/internal/players/: api.go  config.go
service/internal/players/entity/: authenticationProvider.go  identity.go  player.go
service/internal/players/http/: get.go
service/internal/players/repository/: database.go
service/internal/players/service/: repository.go  service.go
service/migrations/: 000001-create-players-table.sql
service/src/: lib.rs  main.rs
service/src/authentication/: configure.rs  mod.rs  provider.rs  provider_name.rs  provider_registry.rs
service/src/entity/: entity.rs  identity.rs  mod.rs
service/src/infrastructure/: mod.rs
service/src/players/: configure.rs  mod.rs  player.rs
service/src/testdatabase/: container.rs  postgres.rs
service/testing/database/: container.go  container_test.go
service/tests/: asserts.rs  integration_test.rs  server.rs  service.rs  tests.rs
service/tests/authentication/: start.rs
service/tests/health/: mod.rs
(+90 files in other folders)
