[package]
name = "spacegame"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[lib]
name = "spacegame_lib"

[[bin]]
name="spacegame"

[dependencies]
dotenv = "0.15.0"
log = "0.4.8"
env_logger = "0.7.1"
actix-rt = "1.1.0"
actix-web = "2.0.0"
actix-cors = "0.2.0"
thiserror = "1.0.14"

[dev-dependencies]
faux = "0.0.4"

