[package]
name = "spacegame"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[lib]
name = "spacegame_lib"

[[bin]]
name="spacegame"

[dependencies]
dotenv = "0.15.0"
log = "0.4.8"
env_logger = "0.7.1"
actix-rt = "1.1.0"
actix-web = "2.0.0"
actix-cors = "0.2.0"
thiserror = "1.0.14"
serde = { version="1.0.106", features=["derive"] }
serde_json = "1.0.51"
actix-http = "1.0.1"
config = "0.10.1"
bb8 = "0.4.0"
bb8-postgres = "0.4.0"
tokio-postgres = "0.5.3"
async-trait = "0.1.30"
rust-embed = "5.5.1"

[dev-dependencies]
faux = "0.0.4"
testcontainers = "0.9.1"
lazy_static = "1.4.0"
